added form validate function

--- a/dine-restaurant-website/starter-code/index.html
+++ b/dine-restaurant-website/starter-code/index.html
@@ -30,7 +30,11 @@
         <p class="Exquisite-p">Experience our seasonal menu in beautiful country surroundings.
            Eat the freshest produce from the comfort of our farmhouse.</p>
     </div>
-    <div><button class="book-a-table">BOOK A TABLE</button></div>
+    <div>
+      <a href="./booking.html">
+        <button class="book-a-table" type="button">BOOK A TABLE</button>
+      </a>
+    </div>
   </div>
   <div>
     <img src="./images/homepage/hero-bg-desktop.jpg" alt="homepage" class="homepage-img"/>
@@ -178,7 +182,9 @@
        We’ll provide a memorable experience for all.
     </p>
     <div class="FAMILY-div">
-      <button>BOOK A TABLE</button>
+      <a href="./booking.html">
+        <button>BOOK A TABLE</button>
+      </a>
     </div>
     <div class="special-event-div">
       <img src="./images/downloads/Rectanglebown.png" alt="brown" class="brown"/>
@@ -213,7 +219,9 @@
        We’ll be sure to mark your special date with an unforgettable meal.
     </p>
     <div class="FAMILY-div">
-      <button>BOOK A TABLE</button>
+      <a href="./booking.html">
+        <button>BOOK A TABLE</button>
+      </a>
     </div>
     <div class="special-event-div">
       <img src="./images/downloads/Rectanglebown.png" alt="brown" class="brown"/>
@@ -248,7 +256,9 @@
       We’ll work with you to make your event a hit with everyone.
     </p>
     <div class="FAMILY-div">
-      <button>BOOK A TABLE</button>
+      <a href="./booking.html">
+        <button>BOOK A TABLE</button>
+      </a>
     </div>
     <div class="special-event-div">
       <img src="./images/downloads/Rectanglebown.png" alt="brown" class="brown"/>
@@ -272,7 +282,9 @@
         <h1>Ready to make a reservation?</h1>
       </div>
       <div class="inner-footer-text-button">
-        <button>BOOK A TABLE</button>
+        <a href="./booking.html">
+          <button>BOOK A TABLE</button>
+        </a>
       </div>
     </div>
     <div class="black">
